--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html {
 
 body {
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
+    grid-template-columns: repeat(50, 10vh);
     grid-template-rows: repeat(50, 10vh);
     font-family: 'Raleway', sans-serif;
     background-color: black;
@@ -13,10 +13,11 @@ body {
     padding-right: 40px;
     z-index: -2;
 }
-#name {
+#name a{
     place-items: center;
     font-size: 40px;
     color: white;
+    text-decoration: none;
 }
 #navigation {
     display: flex;
@@ -55,7 +56,7 @@ nav ul li:hover {
     background-size: 100% 100%;
     width: 20vw;
     height: 20vw;
-    border-radius: 2000px;
+    border-radius: 1000px;
     box-shadow: 0 0 35px rgb(38, 176, 223);
     transition: 0.4s ease-in-out;
 }
@@ -67,9 +68,9 @@ nav ul li:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    grid-column: 8;
+    grid-column: 7/12;
     grid-row: 6;
-    max-width: 50%;
+    max-width: 80%;
     justify-self: center;
     align-self: center;
 }
@@ -86,7 +87,7 @@ nav ul li:hover {
     font-weight: bold;
     overflow: hidden;
     animation:
-        typing 1s steps(12), CursorEnd .4s forwards,
+        typing 1.5s steps(12), CursorEnd .4s forwards,
         cursor .4s step-end infinite alternate;
     margin-bottom: 0;
 }
@@ -109,9 +110,9 @@ nav ul li:hover {
     font-weight: bold;
     overflow: hidden;
     animation:
-        typing2 1s steps(34),
+        typing2 1.5s steps(34),
         cursor2 .4s step-end infinite alternate;
-    animation-delay: 1s;
+    animation-delay: 1.6s;
 }
 @keyframes cursor2 {
     50% {border-color: transparent}
@@ -125,6 +126,60 @@ nav ul li:hover {
 }
 #about_me {
     grid-row: 12;
-    grid-column: 8;
+    grid-column: 7/12;
     justify-self: center;
+}
+.slider-frame {
+    grid-row: 14/17;
+    grid-column: 1/7;
+    height: 600px;
+    width: 600px;
+    overflow: hidden;
+    box-shadow: 0 0 35px rgb(38, 176, 223);
+    border-radius: 20px;
+}
+@-webkit-keyframes slide-animation {
+    0% {left: 0px;}
+    10% {left: 0px;}
+    20% {left: -600px;}
+    30% {left: -600px;}
+    40% {left: -1200px;}
+    60% {left: -1200px;}
+    70% {left: -600px;}
+    80% {left: -600px;}
+    90% {left: 0px;}
+    100% {left: 0px;}
+}
+.slide-images {
+    width: 3600px;
+    height: 800px;
+    position: relative;
+    -webkit-animation-name: slide-animation;
+    -webkit-animation-duration: 24s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+    -webkit-animation-play-state: running;
+}
+.img-container {
+    height: 600px;
+    width: 600px;
+    position: relative;
+    overflow: hidden;
+    float: left;
+}
+.img-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+#about_me_text p {
+    color: white;
+    font-size: 1.5rem;
+    line-height: 1.5;
+    margin-top: 0;
+}
+#about_me_text {
+    grid-row: 14;
+    grid-column: 10/18;
+    padding-right: 35px;
 }
