--- a/styles.css
+++ b/styles.css
@@ -199,3 +199,22 @@ nav ul li:hover {
 #marker a {
     color: rgb(38, 176, 223);
 }
+#resume {
+    grid-row: 23;
+    grid-column: 7/12;
+    justify-self: center;
+}
+#resume-frame {
+    grid-row: 24/33;
+    grid-column: 3/16;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    border: none;
+    box-shadow: 0 0 20px rgb(38, 176, 223);
+}
+#projects {
+    grid-row: 34;
+    grid-column: 7/12;
+    justify-self: center;
+}
